# cleanops-openenv

./: README.md  inference.py  openenv.yaml  pyproject.toml
cleanops_env/: __init__.py  client.py  environment.py  graders.py  local_env.py  models.py  tasks.py
scripts/: __init__.py  run_openai_baseline.py  run_oracle_smoke.py
server/: Dockerfile  __init__.py  app.py
tests/: test_environment.py
